--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "nodemon": "^3.1.0",
-        "sequelize": "^6.37.3"
+        "pg": "^8.11.5",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.37.3",
+        "sequelize-yugabytedb": "^1.0.6"
     }
 }
